# rustnaughts

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  gen2.txt
src/: bots.rs  engine.rs  games.rs  main.rs
src/bots/genbot3/: gbot.rs  nodes.rs
src/bots/nbot1/: nbot.rs  neurons.rs
src/bots/omnibot/: obot.rs
src/bots/randombot/: rbot.rs
src/engine/: batch.rs  botdb.rs  botfactory.rs  errors.rs  gamebase.rs  gameconfig.rs  gamefactory.rs  gameobject.rs  gameplayer.rs  gameresult.rs  log.rs
src/engine/runners/: batchrunner.rs  gen2runner.rs  geneticrunner.rs  singlerunner.rs
src/engine/runners/genetic/: processor.rs
src/games/: naughts.rs
src/games/connect4/: singlegame.rs  world.rs
src/games/connect4/bots/: hbot.rs
src/games/naughts/: board.rs  singlegame.rs
src/games/naughts/bots/: hbot.rs
