[package]
name = "naughts"
version = "0.1.0"
authors = ["Steve Pryde <spryde81@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6"
uuid = { version = "0.7", features = ["v4"]}
argparse = "0.2"
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
